--- a/WebMarkReport/Views/Home/Index.cshtml
+++ b/WebMarkReport/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebMarkReport.Models.ViewModels.TableViewData
+﻿@model WebMarkReport.Models.ViewModels.TableViewModel
 
 @{
     ViewData["Title"] = "График производства работ";
